Update 'jsfsknrep-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:90004da432b548eb2ecb0c6875992490e5d37659@sha256:37638919bb0e4cc4287b7e6ecbab4a8b9b13a38813ef78ca18f8889da1437b42

--- a/components/jsfsknrep-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/jsfsknrep-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jsfsknrep-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:90004da432b548eb2ecb0c6875992490e5d37659@sha256:37638919bb0e4cc4287b7e6ecbab4a8b9b13a38813ef78ca18f8889da1437b42
+          name: container-image
